Bug 519444: [9] Add --add-exports support in IDE - integrate with reconciler (SearchableNameEnvironment), too - refactoring & documentation
Change-Id: I2ef79502d10792255ec9b311b87dbff8a27db435